--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -7,7 +7,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=DESKTOP-VA10LJ0;Initial Catalog=ecommerce-app-db;Integrated Security=True;Pooling=False"
+    //"DefaultConnectionString": "Data Source=DESKTOP-VA10LJ0;Initial Catalog=ecommerce-app-db;Integrated Security=True;Pooling=False",
+    "DefaultConnectionString": "Server=tcp:etickets-application-server.database.windows.net,1433;Initial Catalog=etickets-app-db;Persist Security Info=False;User ID=etickets-admin;Password=Coding@1234?;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   },
   "AllowedHosts": "*"
 }
